// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceList: Component should render card with job 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/1",
        },
      ]
    }
  />
  <ProjectTabs
    active="sources"
    url="/project/1"
  />
  <ContextHeader
    subtitle="Overview"
    title="Data Sources"
  >
    <PlusButton
      id="createDataSourceDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent="No Data Sources"
  >
    <styled.section>
      <Styled(Component)
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        key="0"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span
              id="metaItem-0"
            >
              Source
            </styled.span>
            <styled.span
              id="metaItemValue-0"
            >
              <Component
                customStyles={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span
              id="metaItem-1"
            >
              Items
            </styled.span>
            <styled.span
              id="metaItemValue-1"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span
              id="metaItem-2"
            >
              Fields
            </styled.span>
            <styled.span
              id="metaItemValue-2"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span
              id="metaItem-3"
            >
              Filters
            </styled.span>
            <styled.span
              id="metaItemValue-3"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span
              id="metaItem-4"
            >
              Views
            </styled.span>
            <styled.span
              id="metaItemValue-4"
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    hideOnDesktop={true}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DataSourceList: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/1",
        },
      ]
    }
  />
  <ProjectTabs
    active="sources"
    url="/project/1"
  />
  <ContextHeader
    subtitle="Overview"
    title="Data Sources"
  >
    <PlusButton
      id="createDataSourceDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent="No Data Sources"
  >
    <styled.section>
      <Styled(Component)
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        key="0"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          name
        </Styled(H1)>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span
              id="metaItem-0"
            >
              Source
            </styled.span>
            <styled.span
              id="metaItemValue-0"
            >
              <Component
                customStyles={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span
              id="metaItem-1"
            >
              Items
            </styled.span>
            <styled.span
              id="metaItemValue-1"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span
              id="metaItem-2"
            >
              Fields
            </styled.span>
            <styled.span
              id="metaItemValue-2"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span
              id="metaItem-3"
            >
              Filters
            </styled.span>
            <styled.span
              id="metaItemValue-3"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span
              id="metaItem-4"
            >
              Views
            </styled.span>
            <styled.span
              id="metaItemValue-4"
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Styled(Component)>
      <Styled(Component)
        headerComponent={
          <ForwardRef(styled.div)>
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                firstName lastName
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
            <ForwardRef(styled.div)>
              <Unknown />
            </ForwardRef(styled.div)>
          </ForwardRef(styled.div)>
        }
        key="1"
      >
        <Styled(H1)
          id="dataSourceTitle"
          onClick={[Function]}
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit
        </Styled(H1)>
        <styled.div>
          <styled.div
            key="0"
          >
            <styled.span
              id="metaItem-0"
            >
              Source
            </styled.span>
            <styled.span
              id="metaItemValue-0"
            >
              <Component
                customStyles={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              />
            </styled.span>
          </styled.div>
          <styled.div
            key="1"
          >
            <styled.span
              id="metaItem-1"
            >
              Items
            </styled.span>
            <styled.span
              id="metaItemValue-1"
            >
              246
            </styled.span>
          </styled.div>
          <styled.div
            key="2"
          >
            <styled.span
              id="metaItem-2"
            >
              Fields
            </styled.span>
            <styled.span
              id="metaItemValue-2"
            >
              11
            </styled.span>
          </styled.div>
          <styled.div
            key="3"
          >
            <styled.span
              id="metaItem-3"
            >
              Filters
            </styled.span>
            <styled.span
              id="metaItemValue-3"
            >
              —
            </styled.span>
          </styled.div>
          <styled.div
            key="4"
          >
            <styled.span
              id="metaItem-4"
            >
              Views
            </styled.span>
            <styled.span
              id="metaItemValue-4"
            >
              —
            </styled.span>
          </styled.div>
        </styled.div>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    hideOnDesktop={true}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`DataSourceList: Component should render empty 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Data Sources"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Data Sources"
    secondaryMenuItems={
      Array [
        Object {
          "label": "Project details",
          "to": "/project/1",
        },
      ]
    }
  />
  <ProjectTabs
    active="sources"
    url="/project/1"
  />
  <ContextHeader
    subtitle="Overview"
    title="Data Sources"
  >
    <PlusButton
      id="createDataSourceDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent="No Data Sources"
  >
    <styled.section />
  </LoadingWrapper>
  <NavigationContainer
    hideOnDesktop={true}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      id="createDataSourceBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
